; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/xz/src/xz/extr_coder.c_coder_set_preset.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/xz/src/xz/extr_coder.c_coder_set_preset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LZMA_PRESET_LEVEL_MASK = common dso_local global i32 0, align 4
@preset_number = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @coder_set_preset(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @LZMA_PRESET_LEVEL_MASK, align 4
  %4 = xor i32 %3, -1
  %5 = load i32, i32* @preset_number, align 4
  %6 = and i32 %5, %4
  store i32 %6, i32* @preset_number, align 4
  %7 = load i32, i32* %2, align 4
  %8 = load i32, i32* @preset_number, align 4
  %9 = or i32 %8, %7
  store i32 %9, i32* @preset_number, align 4
  %10 = call i32 (...) @forget_filter_chain()
  ret void
}

declare dso_local i32 @forget_filter_chain(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
